# epcphy

./: CMakeLists.txt  README.md
src/: gui.cpp  gui.hpp  main.cpp  reader.cpp  reader.hpp
src/crc/: crc.cpp
